2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.h:
	* fvwm/menus.c:
	* fvwm/menudim.h:
	* fvwm/menudim.c:
	* fvwm/menustyle.h:
	* fvwm/menustyle.c:
	* fvwm/menucmd.c:
	* fvwm/menuitem.c:
	* fvwm/menuitem.h:
	moved some of the menu code into separate files
	more work on tear off menus; windowlist can now be torn off without a
	memory leak

	* fvwm/template.c:
	* fvwm/template.h:
	added templates for new source files

	* libs/Picture.c (fvwmlib_clone_color):
	new function

	* fvwm/menus.c (make_menu):
	(update_menu):
	removed unused parameter from make_menu()

	* fvwm/fvwm2.1 (Example):
	corrected statement about CaptureHonorsStartsOnPage being the default

2002-03-03  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* Makefile.am:
	* configure.in:
	added and documented --disable-bidi and --disable-perllib

2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (get_window_borders):
	fixed calculation of $[cw.y] and $[cw.height]

	* fvwm/move_resize.c (resize_move_window):
	windows are mo longer hilighted after ResizeMove or ResizeMoveMaximize

2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_move_window):

2002-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	re-added with-xinerama-emulation option that was removed recently

2002-02-28  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* fvwm/fvwm2.1:
	several corrections and rewording

2002-02-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm2.1:
	New section FONT NAMES AND FONT LOADING

	* INSTALL.fvwm:
	* NEWS:
	Document --enable-xft

	* libs/Fft.c (get_FlocaleXftFont):
	Used the xft font height in the place of ascent+descent

	* fvwm/icons.c (DrawIconWindow):
	Fixed the fg colors of the icon title

2002-02-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_CondCase):
	fixed CondCase command
	(CMD_Cond):
	fixed numeric return codes

	* fvwm/add_window.c (CMD_Recapture):